--- a/app/templates/contacts.hbs
+++ b/app/templates/contacts.hbs
@@ -27,7 +27,7 @@
             {{item.email}}
           </div>
           {{#if item.google_maps}}
-          <a class="map-link" href="{{item.google_maps}}">
+          <a class="map-link" href="{{item.google_maps}}" target="_blank">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 431 183" style="enable-background:new 0 0 431
               183;" xml:space="preserve">
               <style type="text/css"> .googlepath0{fill-rule:evenodd;clip-rule:evenodd;fill:#5EA464;}  .googlepath1{fill-rule:evenodd;clip-rule:evenodd;fill:#F5DD44;} .googlepath2{fill-rule:evenodd;clip-rule:evenodd;fill:#6181C4;} .googlepath3{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;} .googlepath4{fill-rule:evenodd;clip-rule:evenodd;fill:#B8B7B6;} .googlepath5{fill:#EFEFEF;} .googlepath6{fill:#DC4B3E;} .googlepath7{fill:#802C27;} .googlepath8{fill:#4F4D55;} </style>
