--- a/app/styles/about.scss
+++ b/app/styles/about.scss
@@ -3,9 +3,15 @@ section.about{
   -ms-perspective: 12px;
   -webkit-perspective: 12px;
   height: 100vh;
-  font-size: 1.05em;
+  font-size: 1.1em;
   overflow-x: hidden;
   overflow-y: auto;
+
+  .title {
+    font-weight: 900;
+    letter-spacing: -0.02em;
+  }
+
   .intro{
     width: 100%;
     background-size: auto 300px;
@@ -14,8 +20,8 @@ section.about{
     background-color: #fff;
     background-image: url("images/about/slogan.png");
     padding-top: 450px;
-    padding-bottom: 280px;
-    min-height: 1550px;
+    padding-bottom: 180px;
+    min-height: 1250px;
     @media(max-width: 991px){
       background-size: 80% auto;
     }
@@ -51,7 +57,6 @@ section.about{
           font-family: 'etelka-medium';
           font-size: 18px;
           text-transform: uppercase;
-          letter-spacing: -0.03em;
           text-shadow: 0px 1px 2px rgba(72,74,84,0.6);
         }
         .body{
@@ -85,7 +90,7 @@ section.about{
   .lab{
     transform: translateZ(3px) scale(0.77);
     -webkit-transform: translateZ(3px) scale(0.77);
-    min-height: 750px;
+    min-height: 800px;
     width: 100%;
     margin: 0 auto;
     overflow: hidden;
@@ -94,27 +99,29 @@ section.about{
     position: relative;
     position: absolute;
     z-index: 10;
-    top: 1350px;
+    top: 2200px;
     @media(max-width: 1199px){
-      top: 1400px;
+      top: 2600px;
     }
     @media(max-width: 991px){
-      top: 1550px;
+      top: 2800px;
     }
     @media(max-width: 767px){
       transform: none;
       -webkit-transform: none;
-      position: static;
+      position: relative;
       min-height: auto;
+      top: 0;
+      margin-top: -600px;
     }
     .outer-wrapper{
       transform: rotate(7deg) translateX(-25%);
       width: 200%;
-      height: 600px;
+      height: 650px;
       transform-origin: 50% 50%;
       overflow: hidden;
       @media(max-width: 767px){
-        height: 450px;
+        height: 600px;
       }
     }
     .wrapper{
@@ -151,6 +158,7 @@ section.about{
         transform: translateX(-50%);
         width: 90%;
         margin-left: 0;
+        top: 44%;
       }
       .title{
         color: rgba(255,255,255,0.9);
@@ -171,10 +179,13 @@ section.about{
     }
   }
   .production{
-    margin-top: -200px;
-    margin-top: 50px;
+    margin-top: -150px;
     overflow: hidden;
     position: relative;
+
+    @media(max-width: 767px){
+      margin-top: -50px;
+    }
     img{
       width: 300px;
       margin-top: 50px;
@@ -182,15 +193,109 @@ section.about{
     .wrapper{
       background-color: rgba(255, 255, 255, 0.8);
       padding-top: 200px;
-      padding-bottom: 100px;
       @media(max-width: 767px){
         padding-top: 100px;
+      }
+      .article .body {
+        @media(max-width: 767px){
+          width: auto;
+        }
       }
     }
     img{
       width: 210px;
       margin-top: 25px;
       margin-bottom: 30px;
+    }
+  }
+  .ecofriendly{
+    overflow: hidden;
+    position: relative;
+    min-height: 1150px;
+    background-position: 0 middle;
+    background-size: 100% auto;
+    @media(max-width: 1199px){
+      min-height: 1350px;
+    }
+
+    .wrapper{
+      padding-top: 200px;
+      padding-bottom: 100px;
+      @media(max-width: 1199px){
+        padding-top: 300px;
+      }
+      @media(max-width: 767px){
+        padding-top: 100px;
+      }
+    }
+    .col-md-6:first-child {
+      .article {
+        @media(max-width: 991px){
+          padding-bottom: 0;
+        }
+
+        .body {
+          width: 450px;
+          min-width: 450px;
+          @media(max-width: 1199px){
+            padding-right: 50px;
+            min-width: auto;
+            width: auto;
+          }
+        }
+      }
+    }
+    .col-md-6:last-child {
+      text-align: right;
+      @media(max-width: 1199px){
+        text-align: left;
+      }
+
+      .article {
+        .body {
+          width: 450px;
+          min-width: 450px;
+          float: right;
+          margin-top: 115px;
+          @media(max-width: 1199px){
+            padding-right: 50px;
+            min-width: auto;
+            width: auto;
+          }
+          @media(max-width: 991px){
+            margin-top: 20px;
+          }
+        }
+      }
+    }
+    img{
+      width: 210px;
+      margin-top: 25px;
+      margin-bottom: 30px;
+    }
+    .ecofriendly-back{
+      transform: translateZ(0.1em) scale(0.885);
+      -webkit-transform: translateZ(0.1em) scale(0.885);
+      transform: translateZ(-0.2em) scale(1.25);
+      -webkit-transform: translateZ(-0.2em) scale(1.25);
+      background-image: url("images/about/eco.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-size: 100% auto;
+      position: absolute;
+      top: -75px;
+      width: 100%;
+      height: 100%;
+      min-height: 800px;
+      z-index: -1;
+      @media(max-width: 1199px){
+        top: 0;
+      }
+      @media(min-width: 992px){
+        &.hidden-back{
+          display: none;
+        }
+      }
     }
   }
   .quality{
@@ -313,7 +418,6 @@ section.about{
         font-size: 48px;
         line-height: 58px;
         font-family: "etelka-medium";
-        letter-spacing: -0.03em;
         @media(max-width: 767px){
           font-size: 28px;
         }
